--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.profiles.active=test
 spring.application.name=Autonexo
 
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/learning_center_os?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/autonexo_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Kratosllego#12
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
