chore: added server address

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #server.port
 server.port=8383
+server.address=0.0.0.0
 spring.profiles.active=test
 # Spring Application Name
 spring.application.name=Autonexo
