--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.profiles.active=test
 spring.application.name=Autonexo
 
 # Spring DataSource Configuration
-# spring.datasource.url=jdbc:mysql://localhost:3306/autonexo_db?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/autonexo?useSSL=false&serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://34.133.29.100:3306/autonexo_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Kratosllego#12
