--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,12 @@ documentation.application.version=@project.version@
 authorization.jwt.secret = WriteHereYourSecretStringForTokenSigningCredentials
 authorization.jwt.expiration.days = 7
 
+# CORS Configuration
+spring.graphql.cors.allowed-origins=https://front-opensource.web.app
+spring.graphql.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.graphql.cors.allowed-headers=Origin,Accept,X-Requested-With,Content-Type,Authorization,Access-Control-Request-Method,Access-Control-Request-Headers
+spring.graphql.cors.allow-credentials=true
+
 # ====================
 # SPRING SECURITY BASIC AUTH
 # ====================
