fix: changed datasource url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.profiles.active=test
 spring.application.name=Autonexo
 
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/autonexo_db?useSSL=false&serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://34.133.29.100:3306/autonexo_db?useSSL=false&serverTimezone=UTC
+#pring.datasource.url=jdbc:mysql://localhost:3306/autonexo_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://34.133.29.100:3306/autonexo_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456789
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
