--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.application.name=Autonexo
 #pring.datasource.url=jdbc:mysql://localhost:3306/autonexo_db?useSSL=false&serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://34.133.29.100:3306/autonexo_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.password=Kratosllego#12
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Spring Data JPA Configuration
